<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ThemeOverlay.AppCompat.Light">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="51dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="156dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:elevation="3dp"
                android:src="@drawable/t1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.114"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.075" />

            <TextView
                android:id="@+id/tvNumAto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:elevation="5dp"
                android:text="@string/numberAto"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.395"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.4" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/t2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTituloAto"
                android:layout_width="381dp"
                android:layout_height="23dp"
                android:layout_marginTop="52dp"
                android:text="@string/titleList"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvNumAto"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/tvDescricaoAto"
                android:layout_width="354dp"
                android:layout_height="17dp"
                android:text="@string/descriptionList"
                app:layout_constraintStart_toStartOf="@+id/tvNumAto"
                app:layout_constraintTop_toBottomOf="@+id/tvTituloAto" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>